# sred

./: .gitignore  LICENSE  README.md  setup.cfg
examples/: train_and_test.ipynb
src/sred/: SReDModel.py  __init__.py
src/sred/data/: TargetGenerator.py  __init__.py  dataset_gen.py
src/sred/tools/: __init__.py  depth_viewer.py  frame_pairer.py  registration_tuner.py
src/sred/utils/: __init__.py  dynamic_linked_utils.py  image_utils.py  metrics.py
src/sred/utils/fast_utils/: Image.cpp  Image.h  Makefile  dllmain.cpp  fast_utils.cpp  fast_utils.h  fast_utils.sln  fast_utils.vcxproj  fast_utils.vcxproj.filters  inpainting.h
