[metadata]
name = sred
version = 1.0.0
author = Alexandre Duarte
description = Official implementation of SelfReDepth, a self-supervised depth denoising and inpainting tool for RGB-D sensors.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = file: LICENSE
url = https://github.com/alexduarte23/sred
keywords = AI Denoising, RGB-D Sensors, Self-Supervision
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
    Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: C++
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
    Environment :: GPU :: NVIDIA CUDA
    Environment :: GPU :: NVIDIA CUDA :: 11.2
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Artificial Intelligence
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules


[options]
python_requires = >=3.7, <4
install_requires = 
    numpy
    matplotlib
    opencv-python
    PySimpleGUI >= 4.57.0
    scikit-image
    tensorflow >= 2.7, < 2.11; platform_system=="Windows"
    tensorflow >= 2.7

[options.extras_require]
examples=
    gdown